fix: add word-wrap: break-word for big text

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,6 +55,7 @@ img.k-right-logo {
 }
 
 .displayed-text {
+  word-wrap: break-word;
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
